AriesParts: Reworked LowRam switch